# otel-export-issue-poc

./: Cargo.toml  README.md
src/: main.rs
