[package]
name = "otel-export-issue-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = "0.26.0"
opentelemetry-otlp = { version = "0.26.0", features = ["tls-roots"] }
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.27.0"
tonic = { version = "0.12.3", features = ["tls-roots"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread"] }