[package]
name = "otel-export-issue-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = "0.23.0"
opentelemetry-otlp = "0.16.0"
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.24.0"
tonic = "0.11.0"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tokio = { version = "1.38", features = ["rt", "rt-multi-thread", "macros"] }